base-application/ui/ingress-resource-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-component
  #namespace: default
  annotations:
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    alb.ingress.kubernetes.io/backend-protocol: 'HTTP'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: 200-499
    alb.ingress.kubernetes.io/target-type: 'ip'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    #alb.ingress.kubernetes.io/actions.default: >
    #  {"Type": "forward", "ForwardConfig": {"TargetGroups": [{"ServiceName": "ui", "ServicePort": "8080"}]}}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/subnets: subnet-0c98af54fbc8f6bc9, subnet-070b306f154bb9f1e
spec:
  ingressClassName: alb
  rules:
  - host: ui.339712744178.realhandsonlabs.net
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
             number: 80
